<resources>
    <string name="app_name">MyWallet</string>
    <string name="wallet_fragment">MyWallet</string>
    <string name="payment_fragment">Payment</string>
    <string name="promotion_fragment">promotion</string>
    <string name="transfer_fragment">Transfer</string>
    <string name="paymentButton">Payment</string>
    <string name="transferButton">Transfer</string>
    <string name="promotionButton">Promotion</string>
    <string name="mywalletButton">MyWallet</string>
    <string name="others_naviDrawer">Others</string>
    <string name="payment">Payment</string>
    <string name="transfer">Transfer</string>
    <string name="mywallet">MyWallet</string>
    <string name="promotion">Promotion</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">name</string>
    <string name="email">tamyewwah@gmail.com</string>
    <string name="email1">Email</string>
    <string name="image">Image</string>
    <string name="transaction_records">Transaction Records</string>
    <string name="balance">Balance</string>
    <string name="feedback">Feedback</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="smart_wallet">Smart Wallet</string>
    <string name="smartwallet">SmartWallet</string>
    <string name="cameraScan">Please scan to QR code</string>
    <string name="subject">Problem:</string>
    <string name="EnterSubject">Enter problem that faced</string>
    <string name="send">send</string>
    <string name="FeedbackMessage">Your Feedback</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account? Create ONE</string>
    <string name="auth_failed">Login Failed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="msg_forgot_password">Please enter your email to reset password!</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="welcome">Welcome to Register</string>
    <string name="already_a_member_login">Already a Member?</string>
    <string name="pin">Pin</string>
    <string name="user_name">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="bank">Bank Name</string>
    <string name="accountno">Account No</string>
    <string name="amount">Total Amount</string>
    <string name="EnterMessage">Please enter your feedback here</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_add_promotion">AddPromotionActivity</string>
    <string name="title_activity_my_voucher">MyVoucherActivity</string>
    <string name="add_voucher">Add_Voucher</string>
    <string name="my_voucher">My_Voucher</string>
    <string name="news">News</string>
    <string name="textview">TextView</string>
    <string name="PinNumber">Enter your pin number</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="addCard">Add a New Card</string>
    <string name="CardName">Enter Your Name on Card</string>
    <string name="CardNum">Enter Your Card Number (16 digits)</string>
    <string name="CVC">CVC Number (Max 3 - digits)</string>
    <string name="ValidTill">Valid Through Date (Month / Year)</string>
    <string name="btnSubmit">Submit</string>
    <array name="cardType_array">
        <item>Visa</item>
        <item>Master</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Change</string>
    <string name="emailSetting">Email :</string>
    <string name="passwordSetting">Password :</string>
    <string name="full_nameSetting">Full Name :</string>
    <string name="phoneSetting">Phone :</string>
    <string name="pinSetting">Pin :</string>
    <string name="nick_name">Nick Name :</string>
</resources>
