<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactionRecord"
            android:icon="@drawable/transaction"
            android:title="@string/transaction_records" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/balance"
            android:title="@string/balance" />

    </group>
    <item android:title="@string/others_naviDrawer" >
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_bank"
                android:title="@string/home" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        </menu>
    </item>



<item
    android:id="@+id/nav_logout"
    android:icon="@drawable/ic_exit_to_app_black_24dp"
    android:title="Logout" />

</menu>