<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/addCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCard"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/input_cardName" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/rEditCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:hint="@string/CardName"
                android:padding="15dp"
                android:paddingLeft="20dp" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerCardType"
            android:layout_width="368dp"
            android:layout_height="54dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_cardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/rEditCardNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:hint="@string/CardNum"
                android:inputType="number"
                android:padding="15dp"
                android:paddingLeft="20dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_cvcNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/rEditCVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:hint="@string/CVC"
                android:padding="15dp"
                android:paddingLeft="20dp"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_validThru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/rEditValidThru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:hint="@string/ValidTill"
            android:padding="15dp"
            android:paddingLeft="20dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonAddCard"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btnSubmit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>