<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/promo_Frag"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:text="@string/promotion_fragment"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_AddVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="380dp"
        android:text="@string/add_voucher" />

    <Button
        android:id="@+id/btn_MyVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="280dp"
        android:text="@string/my_voucher" />

    <Button
        android:id="@+id/btn_News"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="180dp"
        android:text="@string/news" />

</RelativeLayout>