<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.gmail.tamyewwah.mywallet.TransferFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/EditBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_bank"
            android:drawablePadding="20dp"
            android:hint="@string/bank"
            android:inputType="text"
            android:padding="15dp"
            android:paddingLeft="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_accountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/EditAccountNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/accountno"
            android:inputType="number"
            android:padding="15dp"
            android:paddingLeft="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/EditAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:paddingLeft="20dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transfer"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_below="@+id/input_amount"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_transfer"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />
</LinearLayout>